--- a/contact.html
+++ b/contact.html
@@ -4,85 +4,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="jarditou-css/assets/css/fichier1.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--   <link rel="stylesheet" href="jarditou-css/assets/css/fichier1.css"> -->
     <title>Contact</title>
 </head>
 
 <body>
+    <div class="container-fluid">
+        <header>
+            <div class="row">
+                <div class="col-9">
+                    <img src="jarditou-css/src/img/jarditou_logo.jpg" class="img-fluid" title="logo jarditou"
+                        alt="logo jarditou" width="300">
+                </div>
+                <div class="col-3">
+                    <p class="display-3">Tout le jardin</p>
+                </div>
 
-    <header>
-        <img src="jarditou-css/src/img/jarditou_logo.jpg" title="logo jarditou" alt="logo jarditou" width="300">
-        <p>La qualité depuis 70ans </p>
 
-        <nav>
-            <ul>
-                <li> <a href="index.html" title="accueil">Accueil</a> </li>
-                <li> <a href="tableau.html" title="tableau">Tableau</a> </li>
-                <li> <a href="contact.html" title="contact">Formulaire</a> </li>
-            </ul>
-        </nav>
+                <nav class="navbar navbar-expand-sm bg-light">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item"> <a href="index.html" class="nav-link active" title="accueil">Accueil</a>
+                        </li>
+                        <li class="nav-item"> <a href="tableau.html" class="nav-link" title="tableau">Tableau</a> </li>
+                        <li class="nav-item"> <a href="contact.html" class="nav-link" title="contact">Formulaire</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex mx-5">
+                        <input class="form-control me-2 m" type="text" placeholder="Votre promotion">
+                        <button class="btn btn-outline-success" type="button">Search</button>
+                    </form>
+                </nav>
+                <img src="jarditou-css/src/img/promotion.jpg" class="img-fluid" title="promotion" alt="promotion"
+                    width="100%">
+            </div>
+        </header>
 
-        <img src="jarditou-css/src/img/promotion.jpg" title="promotion" alt="promotion" width="100%">
 
-    </header>
-
-    <H1>Contact</H1>
-
-    <p>* ces champs sont obligatoires</p>
-    <form method="post" action="http://bienvu.net/script.php" onsubmit="return checkform(this)" id="formulaire_contact">
-        <fieldset>
-            <legend>Vos coordonnées</legend>
-            <label for="nom">Votre nom*:</label><input type="text" name="nom" id="nom" required><br>
-            <p id="erreur_nom" class="red"></p>
-            <label for="prenom">Votre prénom*:</label><input type="text" name="prenom" id="prenom" required><br>
-            <p id="erreur_prenom" class="red"></p>
-            Votre sexe*:
-            <input type="radio" name="sexe" value="Féminin" required> Féminin
-            <input type="radio" name="sexe" value="Masculin" required> Masculin<br>
-            <p id="erreur_sexe" class="red"></p>
-            <label for="date">Date de naissance*:</label> <input type="date" name="ddn" id="date" required><br>
-            <p id="erreur_date" class="red"></p>
-            <label for="code_postal">Code postal*:</label> <input type="text" name="code_postal" id="code_postal"
-                required><br>
-            <p id="erreur_code" class="red"></p>
-            <label for="adresse">Adresse:</label> <input type="text" name="adresse" id="adresse"><br>
-            <p id="erreur_adresse" class="red"></p>
-            <label for="ville">Ville:</label> <input type="text" name="ville" id="ville"><br>
-            <p id="erreur_ville" class="red"></p>
-            <label for="email">Email*</label> <input type="email" name="email" id="email" required><br>
-            <p id="erreur_mail" class="red"></p>
-        </fieldset>
+        <p>* ces champs sont obligatoires</p>
+        <div class="form-group">
+        <form method="post" action="http://bienvu.net/script.php" onsubmit="return checkform(this)"
+            id="formulaire_contact">
+            <fieldset>
+                <h1>Vos coordonnées</h1>
+                <label for="nom">Votre nom*:</label><input type="text" name="nom" id="nom" class="form-control" required><br>
+                <p id="erreur_nom" class="red"></p>
+                <label for="prenom">Votre prénom*:</label><input type="text" name="prenom" id="prenom" class="form-control" required><br>
+                <p id="erreur_prenom" class="red"></p>
+                Votre sexe*:
+                <input type="radio" name="sexe" value="Féminin" required> Féminin
+                <input type="radio" name="sexe" value="Masculin" required> Masculin<br>
+                <p id="erreur_sexe" class="red"></p>
+                <label for="date">Date de naissance*:</label> <input type="date" name="ddn" id="date" class="form-control" required><br>
+                <p id="erreur_date" class="red"></p>
+                <label for="code_postal">Code postal*:</label> <input type="text" name="code_postal" id="code_postal"
+                class="form-control" required><br>
+                <p id="erreur_code" class="red"></p>
+                <label for="adresse">Adresse:</label> <input type="text" name="adresse" id="adresse" class="form-control"><br>
+                <p id="erreur_adresse" class="red"></p>
+                <label for="ville">Ville:</label> <input type="text" name="ville" id="ville" class="form-control"><br>
+                <p id="erreur_ville" class="red"></p>
+                <label for="email">Email*</label> <input type="email" name="email" id="email" class="form-control" required><br>
+                <p id="erreur_mail" class="red"></p>
+            </fieldset>
+            <br>
+            <fieldset>
+                <label for="sujet">Sujet*</label>
+                <select id="sujet" required>
+                    <option value="">Veuillez séléctionner un sujet</option>
+                    <option value="commandes">Mes commandes</option>
+                    <option value="question">question sur un produit</option>
+                    <option value="réclamation">Réclamation</option>
+                    <option value="autre">Autres</option>
+                </select><br>
+                <p id="sujet"></p>
+                <label for="question">Votre question*</label> <textarea name="question" id="question"
+                    value=""></textarea>
+                <p id="question"></p>
+            </fieldset>
+            <br>
+            <label for="consent"></label> <input type="checkbox" name="consent" value="consent" id="consent"> *J'accepte
+            le
+            traitement informatique de ce formulaire <br>
+            <button type="submit" class="btn btn-dark">Envoyer</button>
+            <button type="reset" class="btn btn-dark">Annuler</button>
+        </form>
+        </div>
         <br>
-        <fieldset>
-            <label for="sujet">Sujet*</label>
-            <select id="sujet" required>
-                <option value="">Veuillez séléctionner un sujet</option>
-                <option value="commandes">Mes commandes</option>
-                <option value="question">question sur un produit</option>
-                <option value="réclamation">Réclamation</option>
-                <option value="autre">Autres</option>
-            </select><br>
-            <p id="sujet"></p>
-            <label for="question">Votre question*</label> <textarea name="question" id="question" value=""></textarea>
-            <p id="question"></p>
-        </fieldset>
-        <br>
-        <label for="consent"></label> <input type="checkbox" name="consent" value="consent" id="consent"> *J'accepte le
-        traitement informatique de ce formulaire <br>
-        <button type="submit">Envoyer</button>
-        <button type="reset">Annuler</button>
-    </form>
-    <br>
-    <footer>
-        <nav>
-            <ul>
-                <li> <a href="index.html" title="mentions légales">Mention légales</a></li>
-                <li> <a href="index.html" title="Horaires">Horaires</a></li>
-                <li> <a href="index.html" title="plan">Plan du site</a></li>
-            </ul>
-        </nav>
-    </footer>
 
+        <footer>
+            <nav class="navbar navbar-expand-sm bg-dark">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item"> <a href="index.html" class="nav-link text-light"
+                            title="mentions légales">Mention légales</a></li>
+                    <li class="nav-item"> <a href="index.html" class="nav-link text-light" title="Horaires">Horaires</a>
+                    </li>
+                    <li class="nav-item"> <a href="index.html" class="nav-link text-light" title="plan">Plan du site</a>
+                    </li>
+                </ul>
+            </nav>
+        </footer>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="jarditou-css/assets/js/contact.js"></script>
 </body>
 
