--- a/index.html
+++ b/index.html
@@ -4,61 +4,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="jarditou-css/assets/css/fichier1.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--     <link rel="stylesheet" href="jarditou-css/assets/css/fichier1.css"> -->
     <title>index</title>
 </head>
 
 <body>
+    <div class="container-fluid">
+        <header>
+            <div class="row">
+                <div class="col-9">
+                    <img src="jarditou-css/src/img/jarditou_logo.jpg" class="img-fluid" title="logo jarditou"
+                        alt="logo jarditou" width="300">
+                </div>
+                <div class="col-3">
+                    <p class="display-3">Tout le jardin</p>
+                </div>
 
-    <header>
-        <img src="jarditou-css/src/img/jarditou_logo.jpg" title="logo jarditou" alt="logo jarditou" width="300">
-        <p>Tout le jardin</p>
 
-        <nav>
-            <ul>
-                <li> <a href="index.html" title="accueil">Accueil</a> </li>
-                <li> <a href="tableau.html" title="tableau">Tableau</a> </li>
-                <li> <a href="contact.html" title="contact">Formulaire</a> </li>
-            </ul>
-        </nav>
+                <nav class="navbar navbar-expand-sm bg-light">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item"> <a href="index.html" class="nav-link active" title="accueil">Accueil</a>
+                        </li>
+                        <li class="nav-item"> <a href="tableau.html" class="nav-link" title="tableau">Tableau</a> </li>
+                        <li class="nav-item"> <a href="contact.html" class="nav-link" title="contact">Formulaire</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex mx-5">
+                        <input class="form-control me-2 m" type="text" placeholder="Votre promotion">
+                        <button class="btn btn-outline-success" type="button">Search</button>
+                      </form>
+                </nav>
+                    <img src="jarditou-css/src/img/promotion.jpg" class="img-fluid" title="promotion" alt="promotion" width="100%">
+            </div>
+        </header>
+        <div class="row">
+            <div class="col-12 col-lg-8">
+ 
+                <article class="text-justify">
+                    <h2>L'entreprise</h2>
 
-        <img src="jarditou-css/src/img/promotion.jpg" title="promotion" alt="promotion" width="100%">
+                    <p>Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du
+                        jardin et
+                        du
+                        paysagisme</p>
+                    <p>Créée il y a 70ans, notre entreprise vend fleurs, arbustes, matériel à main et motorisés.</p>
+                    <p>Implantés à Amiens, nous ontervenons dans tout le département de la Somme: Albert, Doullens,
+                        Péronne,
+                        Abbevile, Corbie.</p>
+                </article>
+                <article class="text-justify">
+                    <h2>Qualité</h2>
+                    <p>Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur durant tout
+                        votre
+                        projet.
+                    </p>
+                    <p>Vous serez séduit par notre expertise, nos compétences et notre sérieux.</p>
+                </article>
+                <article class="text-justify">
+                    <h2>devis gratuit</h2>
+                    <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande
+                        d’intervention.
+                        Vous
+                        souhaitez un devis ? Nous vous le réalisons gratuitement.</p>
+                </article>
+            </div>
+            <div class="col-12 col-lg-4 bg-warning text-center h2">
+                [colonne de droite]
+            </div>
+        </div>
+        <footer >
+            <nav class="navbar navbar-expand-sm bg-dark">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item"> <a href="index.html" class="nav-link text-light" title="mentions légales">Mention légales</a></li>
+                    <li class="nav-item"> <a href="index.html" class="nav-link text-light" title="Horaires">Horaires</a></li>
+                    <li class="nav-item"> <a href="index.html" class="nav-link text-light" title="plan">Plan du site</a></li>
+                </ul>
+            </nav>
+        </footer>
 
-    </header>
-
-    <aside>[colonne de droite]</aside>
-    <H1>Acceuil</H1>
-    
-    <article>
-        <h2>L'entreprise</h2>
-
-        <p>Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du jardin et du
-            paysagisme</p>
-        <p>Créée il y a 70ans, notre entreprise vend fleurs, arbustes, matériel à main et motorisés.</p>
-        <p>Implantés à Amiens, nous ontervenons dans tout le département de la Somme: Albert, Doullens, Péronne,
-            Abbevile, Corbie.</p>
-    </article>
-    <article>
-        <h2>Qualité</h2>
-        <p>Nous mettons à votre disposition un service personnalisé, avec 1 seul interlocuteur durant tout votre projet.
-        </p>
-        <p>Vous serez séduit par notre expertise, nos compétences et notre sérieux.</p>
-    </article>
-    <article>
-        <h2>devis gratuit</h2>
-        <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d’intervention. Vous
-            souhaitez un devis ? Nous vous le réalisons gratuitement.</p>
-    </article>
-
-    <footer>
-        <nav>
-            <ul>
-                <li> <a href="index.html" title="mentions légales">Mention légales</a></li>
-                <li> <a href="index.html" title="Horaires">Horaires</a></li>
-                <li> <a href="index.html" title="plan">Plan du site</a></li>
-            </ul>
-        </nav>
-    </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
