--- a/tableau.html
+++ b/tableau.html
@@ -4,101 +4,126 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="jarditou-css/assets/css/fichier1.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--   <link rel="stylesheet" href="jarditou-css/assets/css/fichier1.css"> -->
     <title>Tableau</title>
 </head>
 
 <body>
+    <div class="container-fluid">
+        <header>
+            <div class="row">
+                <div class="col-9">
+                    <img src="jarditou-css/src/img/jarditou_logo.jpg" class="img-fluid" title="logo jarditou"
+                        alt="logo jarditou" width="300">
+                </div>
+                <div class="col-3">
+                    <p class="display-3">Tout le jardin</p>
+                </div>
 
-    <header>
-        <img src="jarditou-css/src/img/jarditou_logo.jpg" title="logo jarditou" alt="logo jarditou" width="300">
-        <p>La qualité depuis 70ans </p>
 
-        <nav>
-            <ul>
-                <li> <a href="index.html" title="accueil">Accueil</a> </li>
-                <li> <a href="tableau.html" title="tableau">Tableau</a> </li>
-                <li> <a href="contact.html" title="contact">Contact</a> </li>
-            </ul>
-        </nav>
+                <nav class="navbar navbar-expand-sm bg-light">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item"> <a href="index.html" class="nav-link active" title="accueil">Accueil</a>
+                        </li>
+                        <li class="nav-item"> <a href="tableau.html" class="nav-link" title="tableau">Tableau</a> </li>
+                        <li class="nav-item"> <a href="contact.html" class="nav-link" title="contact">Formulaire</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex mx-5">
+                        <input class="form-control me-2 m" type="text" placeholder="Votre promotion">
+                        <button class="btn btn-outline-success" type="button">Search</button>
+                    </form>
+                </nav>
+                <img src="jarditou-css/src/img/promotion.jpg" class="img-fluid" title="promotion" alt="promotion"
+                    width="100%">
+            </div>
+        </header>
 
-        <img src="jarditou-css/src/img/promotion.jpg" title="promotion" alt="promotion" width="100%">
+<div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead class="table-dark">
+                <tr>
+                    <th>Photo</th>
+                    <th>ID</th>
+                    <th>Catégorie</th>
+                    <th>Libellé</th>
+                    <th>Prix</th>
+                    <th>Couleur</th>
+                </tr>
+            </thead>
 
-    </header>
+            <tbody>
+                <tr>
+                    <td><img width="100" height="100" src="jarditou-css/src/img/7.jpg" alt="barbecue 7"
+                            title="barbecue 7">
+                    </td>
+                    <td>7</td>
+                    <td>Barbecues</td>
+                    <td>Aramis</td>
+                    <td>110.00€</td>
+                    <td>Brun</td>
+                </tr>
+                <tr>
+                    <td><img width="100" height="100" src="jarditou-css/src/img/8.jpg" alt="barbecue8"
+                            title="barbecue8">
+                    </td>
+                    <td>8</td>
+                    <td>Barbecues</td>
+                    <td>Athos</td>
+                    <td>249.99€</td>
+                    <td>Noir</td>
+                </tr>
+                <tr>
+                    <td><img width="100" height="100" src="jarditou-css/src/img/11.jpg" alt="barbecue11"
+                            title="barbecue11">
+                    </td>
+                    <td>11</td>
+                    <td>barbecues</td>
+                    <td>Clatronic</td>
+                    <td>135.90€</td>
+                    <td>Chrome</td>
+                </tr>
+                <tr>
+                    <td><img width="100" height="100" src="jarditou-css/src/img/12.jpg" alt="barbecue12"
+                            title="barbecue12">
+                    </td>
+                    <td>12</td>
+                    <td>Barbecues</td>
+                    <td>Camping</td>
+                    <td>88€</td>
+                    <td>Noir</td>
+                </tr>
+                <tr>
+                    <td><img width="100" height="100" src="jarditou-css/src/img/13.jpg" alt="brouette13"
+                            title="brouette13">
+                    </td>
+                    <td>13</td>
+                    <td>Brouette</td>
+                    <td>Green</td>
+                    <td>49.00€</td>
+                    <td>Verte</td>
+                </tr>
+            </tbody>
+        </table>
+        </div>
+        <br>
 
-<h1>Tableau</h1>
-    
-    <table>
-        <thead>
-            <tr>
-                <th>Photo</th>
-                <th>ID</th>
-                <th>Catégorie</th>
-                <th>Libellé</th>
-                <th>Prix</th>
-                <th>Couleur</th>
-            </tr>
-        </thead>
+        <footer>
+            <nav class="navbar navbar-expand-sm bg-dark">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item"> <a href="index.html" class="nav-link text-light"
+                            title="mentions légales">Mention légales</a></li>
+                    <li class="nav-item"> <a href="index.html" class="nav-link text-light" title="Horaires">Horaires</a>
+                    </li>
+                    <li class="nav-item"> <a href="index.html" class="nav-link text-light" title="plan">Plan du site</a>
+                    </li>
+                </ul>
+            </nav>
+        </footer>
 
-        <tbody>
-            <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/7.jpg" alt="barbecue 7" title="barbecue 7">
-                </td>
-                <td>7</td>
-                <td>Barbecues</td>
-                <td>Aramis</td>
-                <td>110.00€</td>
-                <td>Brun</td>
-            </tr>
-            <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/8.jpg" alt="barbecue8" title="barbecue8">
-                </td>
-                <td>8</td>
-                <td>Barbecues</td>
-                <td>Athos</td>
-                <td>249.99€</td>
-                <td>Noir</td>
-            </tr>
-            <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/11.jpg" alt="barbecue11" title="barbecue11">
-                </td>
-                <td>11</td>
-                <td>barbecues</td>
-                <td>Clatronic</td>
-                <td>135.90€</td>
-                <td>Chrome</td>
-            </tr>
-            <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/12.jpg" alt="barbecue12" title="barbecue12">
-                </td>
-                <td>12</td>
-                <td>Barbecues</td>
-                <td>Camping</td>
-                <td>88€</td>
-                <td>Noir</td>
-            </tr>
-            <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/13.jpg" alt="brouette13" title="brouette13">
-                </td>
-                <td>13</td>
-                <td>Brouette</td>
-                <td>Green</td>
-                <td>49.00€</td>
-                <td>Verte</td>
-            </tr>
-        </tbody>
-    </table>
-<br>
-
-    <footer>
-        <nav>
-            <ul>
-                <li> <a href="index.html" title="mentions légales">Mention légales</a></li>
-                <li> <a href="index.html" title="Horaires">Horaires</a></li>
-                <li> <a href="index.html" title="plan">Plan du site</a></li>
-            </ul>
-        </nav>
-    </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
